Router/data/iptables.up.rules
# Generated by iptables-save v1.6.0 on Sat Nov  4 05:58:20 2017
*mangle
:PREROUTING ACCEPT [172:9867]
:INPUT ACCEPT [172:9867]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [356:392929]
:POSTROUTING ACCEPT [356:392929]
COMMIT
# Completed on Sat Nov  4 05:58:20 2017
# Generated by iptables-save v1.6.0 on Sat Nov  4 05:58:20 2017
*nat
:PREROUTING ACCEPT [27:1620]
:INPUT ACCEPT [27:1620]
:OUTPUT ACCEPT [4:250]
:POSTROUTING ACCEPT [6:380]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:45703
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:50879
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 45703 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 50879 -j SNAT --to-source :53
COMMIT
# Completed on Sat Nov  4 05:58:20 2017
# Generated by iptables-save v1.6.0 on Sat Nov  4 05:58:20 2017
*filter
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:INPUT ACCEPT [0:0]
-A INPUT -i eth0@if165 -j ACCEPT
-A INPUT -i eth1@if169 -j ACCEPT
-A FORWARD -i eth0@if165 -o eth1@if169 -j ACCEPT
-A FORWARD -i eth1@if169 -o eth0@if165 -j ACCEPT
COMMIT
# Completed on Sat Nov  4 05:58:20 2017
